[gd_scene load_steps=7 format=3 uid="uid://4gtphkt8mc2t"]

[ext_resource type="Script" uid="uid://enn2ikn72q3c" path="res://main/title_menu.gd" id="1_w37us"]
[ext_resource type="FontFile" uid="uid://btonjd5feedgb" path="res://user_interface/fonts/font_1.ttf" id="2_mgd1j"]

[sub_resource type="LabelSettings" id="LabelSettings_w37us"]
font = ExtResource("2_mgd1j")
outline_size = 5
outline_color = Color(0.12549, 0.0823529, 0.2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_noc45"]
font = ExtResource("2_mgd1j")
font_size = 8
outline_size = 5
outline_color = Color(0.12549, 0.0823529, 0.2, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_62e2m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qtu10"]

[node name="TitleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w37us")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Submarine"
label_settings = SubResource("LabelSettings_w37us")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -29.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 0
text = "HighScore 100"
label_settings = SubResource("LabelSettings_noc45")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.12549, 0.0823529, 0.2, 1)
theme_override_constants/outline_size = 5
theme_override_constants/icon_max_width = 22
theme_override_fonts/font = ExtResource("2_mgd1j")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_62e2m")
text = "Play"
flat = true

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.12549, 0.0823529, 0.2, 1)
theme_override_constants/outline_size = 5
theme_override_constants/icon_max_width = 22
theme_override_fonts/font = ExtResource("2_mgd1j")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_qtu10")
text = "Exit"
flat = true

[connection signal="focus_entered" from="Buttons/PlayButton" to="." method="_on_play_button_focus_entered"]
[connection signal="focus_exited" from="Buttons/PlayButton" to="." method="_on_play_button_focus_exited"]
[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="focus_entered" from="Buttons/ExitButton" to="." method="_on_exit_button_focus_entered"]
[connection signal="focus_exited" from="Buttons/ExitButton" to="." method="_on_exit_button_focus_exited"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
